--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "js": "^0.1.0",
-    "node-sass": "4.13.0"
+    "node-sass": "4.13.0",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.2.0",
